ticket alignment fix

--- a/Webadmin/src/main/webapp/assets/css/custom.css
+++ b/Webadmin/src/main/webapp/assets/css/custom.css
@@ -592,7 +592,7 @@ textarea.form-control {
     position: absolute;
     top: 3px;
     right: 10px;
-    padding: 11px 8px;
+    padding: 10px 8px;
     background: #f5f5f5;
     border-radius: 3px;
     min-width: 200px;
@@ -600,6 +600,7 @@ textarea.form-control {
 .HoverBx.TicketActBx
 {
     min-width: 390px;
+    top: 0;
     /*top: 12px;*/
 }
 .AppliedFilterCon
